// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vdom components Обновляет вложенные компоненты 1`] = `
<div>
  <span>
    Enough of Some text
  </span>
</div>
`;

exports[`vdom components Обновляет вложенные компоненты 2`] = `
<div>
  <span>
    Enough of Some text updated
  </span>
</div>
`;

exports[`vdom components Обновляет вложенные компоненты 3`] = `
<div>
  <span>
    Enough of Some text other key
  </span>
</div>
`;

exports[`vdom components Обновляет вложенные компоненты 4`] = `
Array [
  "child didCreate",
  "didCreate",
  "willUpdate",
  "child willUpdate",
  "child didUpdate",
  "didUpdate",
  "willUpdate",
  "child didCreate",
  "child willDestroy",
  "didUpdate",
  "willDestroy",
  "child willDestroy",
]
`;

exports[`vdom components Обновляет компонент с атрибутом 1`] = `
<div>
  Some text
</div>
`;

exports[`vdom components Обновляет компонент с атрибутом 2`] = `
<div>
  Some text updated
</div>
`;

exports[`vdom components Обновляет компонент с атрибутом 3`] = `
Array [
  "didCreate",
  "willUpdate",
  "didUpdate",
]
`;

exports[`vdom components Отображает компонент 1`] = `<div />`;

exports[`vdom components Отображает компонент 2`] = `
Array [
  "didCreate",
  "willDestroy",
]
`;

exports[`vdom create Создаёт один элемент 1`] = `<div />`;

exports[`vdom create Создаёт один элемент с двумя атрибутами 1`] = `
<div
  style="background-color: red;"
  tab-index="0"
/>
`;

exports[`vdom create Создаёт один элемент с двумя детьми 1`] = `
<div>
  <span />
  Some text
</div>
`;

exports[`vdom create Создаёт одну текстовую ноду 1`] = `It works!`;

exports[`vdom update attrs Обновляет атрибуты 0 -> 2 1`] = `
<div
  style="background-color: black;"
  tab-index="2"
/>
`;

exports[`vdom update attrs Обновляет атрибуты 1 -> 2 1`] = `
<div
  style="background-color: black;"
  tab-index="2"
/>
`;

exports[`vdom update attrs Обновляет атрибуты 2 -> 0 1`] = `<div />`;

exports[`vdom update attrs Обновляет атрибуты 2 -> 1 1`] = `
<div
  style="background-color: black;"
/>
`;

exports[`vdom update attrs Обновляет атрибуты 2 -> 2 1`] = `
<div
  style="background-color: black;"
  tab-index="2"
/>
`;

exports[`vdom update children Обновляет детей 0 -> 2 1`] = `
<div>
  <b
    a="A"
  />
  <i
    b="B"
  />
</div>
`;

exports[`vdom update children Обновляет детей 1 -> 1 1`] = `
<div>
  <span />
</div>
`;

exports[`vdom update children Обновляет детей 1 -> 1 разные ключи 1`] = `
<div>
  <b />
</div>
`;

exports[`vdom update children Обновляет детей 1 -> 1 разные типы 1`] = `
<div>
  Some text
</div>
`;

exports[`vdom update children Обновляет детей 2 -> 0 1`] = `<div />`;

exports[`vdom update children Обновляет детей 2 -> 2 1`] = `
<div>
  <span
    disabled="disabled"
  />
  Some text updated
</div>
`;

exports[`vdom update children Обновляет детей 2 -> 2 разные ключи 1`] = `
<div>
  <b
    b="B"
  />
  <i
    a="A"
  />
</div>
`;

exports[`vdom update children Обновляет детей 2 -> 2 разные типы 1`] = `
<div>
  Some text updated
  <span
    disabled="disabled"
  />
</div>
`;
